correct text-align in styles.css to match example

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -3,4 +3,5 @@ div {
     background-color: red;
     font-size: 40px;
     font-weight: 700;
+    text-align: center;
 }
